version/deployment1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-deployment-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v1
  template:
    metadata:
      labels:
        app: app
        version: v1
    spec:
      containers:
      - name: istio-container
        image:  abhimudda/istio-image1:version1
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
