version/deployment3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-deployment-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v3
  template:
    metadata:
      labels:
        app: app
        version: v3
    spec:
      containers:
      - name: istio-container
        image: istio-image3:v3
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
