version/service.yml
apiVersion: v1
kind: Service
metadata:
  name: istio-service
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
